add content to website

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "astro:assets";
+import { Javascript, Typescript, Php, Rubyonrails, React, Dotnet } from 'simple-icons-astro';
 import backpack from "../../public/backpack.jpeg";
 import climbing from "../../public/climbing.jpeg";
 import toastie from "../../public/toastie.jpeg";
@@ -28,69 +29,93 @@ import toastie from "../../public/toastie.jpeg";
 			</div>
 		</div>
 		<p class="text">
-			I am Jayden, a seasoned professional in the fields of Product, Design, and Engineering. My
-			journey commenced as a teenager, marked by an introduction to Adobe Creative Suite, which
-			became the catalyst for my design and technology passion. Over the years, I held positions in
-			digital companies across operations, marketing, design, product, and engineering. With a track
-			record in award-winning startups, I have cultivated a versatile skill set and a nuanced
-			understanding of creativity and technological innovation.
+			A multi-disciplinary technologist specialising in scaling software products and teams.
+		</p>
+		<p class="text">
+			My journey begun as a YouTuber (2010) where I focused on mastering the Adobe Creative Suite – gaining skills in videography, photography, visual effects, audio editing, web development, and flash development. It's also where I discovered the importance of branding and marketing, which led me to join my first startup during high school. The company was PickleHosting, a game server and domain hosting company that I did customer support, networking, and operations. I later transitioned into a full-time role as an Operations Manager, where I was responsible for the day-to-day operations of the business. It was my first taste of building products and launching them to market.
+		</p>
+		<p class="text">
+			After leaving PickleHosting, I joined Digivizer as a Digital Designer, where I was responsible for designing and developing web applications. Wanting more freedom to bring my designs to life, I transitioned into a Software Engineer role, where I was able to utilise my design skills to create beautiful and functional web applications using ReactJS. 
+		</p>
+		<p class="text">
+			Now armed with a solid foundation across design, marketing, business ops, and engineering, I joined hipages as a Growth Software Engineer to put my skills to the test. Here I worked on A/B experiments in a data-driven workflow in order to improve SEO, conversion rates, and user experience. This translated to significant growth as the trailblazers for a cross-functional growth team. The biggest impact was converting lengthy quote forms into dynamic multi-step modals improving drop-off rates by 60%.
+		</p>
+		<p class="text">
+			Having grown in my engineering skills, I made a decision to leave Sydney and move regional to Newcastle, Australia. I joined a local agency called Mudbath, where I was able to work on a variety of projects for clients such as nib and the Australian Rail Track Corporation. This role allowed me to further develop my skills in ReactJS, .NET, and architecting codebases from scratch for mission critical applications.
+		</p>
+		<p class="text">
+			An opportunity came up to join a product-based technology startup as a Founding Software Engineer, this company was BetMakers Technology Group. I was responsible for building a new product from the ground up, which was a significant challenge but also a great opportunity to learn and grow. I was able to utilise my skills in ReactJS, PHP, and networking to create complex real-time financial apps whilst also building a team of engineers across a large product portfolio. This was a pivotal moment in my career and allowed me to take on roles such as Lead Software Engineer, DevOps Engineer, Engineering Manager, Product Manager, and Head of Engineering. Conducting in these roles enabled commerical projects that lead to $40M in annual revenue growth which delivered a 1,400% gain for shareholders and investors.
+		</p>
+		<p class="text">
+			Having speed ran building a $1B startup, I decided to take a step back and focus on the role I enjoyed the most, and so, I joined Camplify as an Engineering Manager. Using everything I learned, I was able to refine my leadership and managerial skills, leading a team of designers and engineers to scale a loved domestic marketplace for caravans and campers across 7 countries, 4 languages, and 4 currencies. Where I helped guide and inspire the team with a major M&A project that would double our growth in 12 months.
+		</p>
+		<p class="text">
+			After scaling Camplify's product, I decided to take a step back and reconnect with programming. Taking a hands-on Senior Engineering role at Covidence, a non-profit organisation that builds software to help researchers conduct systematic reviews. Here I was able to utilise my skills in ReactJS, TypeScript, and Ruby on Rails to create a world-class product that is loved by researchers and students around the world.
 		</p>
 	</section>
 	<section aria-label="Pulse" class="mb-2 mt-16">
 		<h2 class="title mb-4 text-xl">Career</h2>
 		<ul class="space-y-4 sm:space-y-2">
-			<li class="flex flex-col gap-x-2 sm:flex-row">
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
 				<span class="min-w-[120px] text-gray-500">Senior Software Engineer:</span>
-				<span
-					><a class="cactus-link" href="https://covidence.org/"
-						>Covidence / Future Evidence Foundation</a
-					></span
-				>
-			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Technology Startup Mentor:</span>
-				<span
-					><a class="cactus-link" href="https://stewardship.ventures/">Stewardship Ventures</a
-					></span
-				>
-			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Lead Software Engineer:</span>
-				<span
-					><a class="cactus-link" href="https://camplify.com/">Camplify Holdings Limited</a></span
-				>
-			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Lead Software Engineer:</span>
-				<span>
-					<a class="cactus-link" href="https://betmakers.com/">Betmakers Technology Group</a>
+				<span class="flex items-center gap-2">
+					<a class="cactus-link" href="https://covidence.org/">Covidence</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<Typescript class="h-5 w-5" name="simple-icons:typescript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Rubyonrails class="h-5 w-5" name="simple-icons:ruby-on-rails" />
 				</span>
 			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">Product & Engineering Manager:</span>
+				<span class="flex items-center gap-2">
+					<a class="cactus-link" href="https://camplify.com/">Camplify</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<Typescript class="h-5 w-5" name="simple-icons:typescript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Rubyonrails class="h-5 w-5" name="simple-icons:ruby-on-rails" />
+				</span>
+			</li>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">Product & Engineering Lead:</span>
+				<span class="flex items-center gap-2">
+					<a class="cactus-link" href="https://betmakers.com/">Betmakers</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<Typescript class="h-5 w-5" name="simple-icons:typescript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Php class="h-5 w-5" name="simple-icons:php" />
+				</span>
+			</li>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
 				<span class="min-w-[120px] text-gray-500">Senior Software Engineer:</span>
-				<span>
-					<a class="cactus-link" href="https://mudbath.com.au/">Mudbath (ARTC, nib)</a>
+				<span class="flex items-center gap-2">
+					<a class="cactus-link" href="https://mudbath.com.au/">Mudbath</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<Typescript class="h-5 w-5" name="simple-icons:typescript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Dotnet class="h-5 w-5" name="simple-icons:dot-net" />
 				</span>
 			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Software Engineer:</span>
-				<span>
-					<a class="cactus-link" href="https://hipagesgroup.com.au/">Hipages Group</a>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">Growth Software Engineer:</span>
+				<span class="flex items-center gap-2">
+					<a class="cactus-link" href="https://hipagesgroup.com.au/">hipages</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<Typescript class="h-5 w-5" name="simple-icons:typescript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Php class="h-5 w-5" name="simple-icons:php" />
 				</span>
 			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Software Engineer:</span>
-				<span>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">Design Software Engineer:</span>
+				<span class="flex items-center gap-2">
 					<a class="cactus-link" href="https://digivizer.com/">Digivizer</a>
+					<Javascript class="h-5 w-5" name="simple-icons:javascript" />
+					<React class="h-5 w-5" name="simple-icons:react" />
+					<Rubyonrails class="h-5 w-5" name="simple-icons:ruby-on-rails" />
 				</span>
 			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
-				<span class="min-w-[120px] text-gray-500">Digital Designer:</span>
-				<span>
-					<a class="cactus-link" href="https://digivizer.com/">Digivizer</a>
-				</span>
-			</li>
-			<li class="flex flex-col gap-x-2 sm:flex-row">
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
 				<span class="min-w-[120px] text-gray-500">Operations Manager:</span>
 				<span>
 					<a class="cactus-link" href="/about/">PickleHosting (EXIT)</a>
