--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,20 @@ import PageLayout from "@/layouts/Base";
 <PageLayout meta={{ title: "About" }}>
 	<section>
 		<h1 class="title">Projects</h1>
-		<h2 class="text">A series of personal experiments</h2>
-		<p class="text">Coming soon..</p>
+		<h2 class="text">A series of personal endeavours</h2>
+		<ul>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">R&D field-based technology:</span>
+				<span>
+					<a class="cactus-link" href="https://telemetryworks.com/">TelemetryWorks</a>
+				</span>
+			</li>
+			<li class="flex flex-col gap-x-2 sm:flex-row items-center">
+				<span class="min-w-[120px] text-gray-500">Drone based aerial mapping:</span>
+				<span>
+					<a class="cactus-link" href="https://northshed.com.au/">Northshed Aerial Solutions</a>
+				</span>
+			</li>
+		</ul>
 	</section>
 </PageLayout>
