--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,14 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "astro:assets";
-import { Javascript, Typescript, Php, Rubyonrails, React, Dotnet } from 'simple-icons-astro';
+import {
+	Javascript,
+	Typescript,
+	Php,
+	Rubyonrails,
+	React,
+	Dotnet,
+} from "simple-icons-astro";
 import backpack from "../../public/backpack.jpeg";
 import climbing from "../../public/climbing.jpeg";
 import toastie from "../../public/toastie.jpeg";
