--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,52 +2,28 @@
 import PageLayout from "@/layouts/Base";
 import profile from "../../public/profile.jpeg";
 import { Image } from "astro:assets";
-
-const yearsOfExperience = new Date().getFullYear() - 2009;
 ---
 
 <PageLayout meta={{ title: "Home" }}>
-	<section>
-		<h1 class="title">Jayden Harrod</h1>
-		<h2 class="text">Australian Technologist</h2>
-		<div class="flex gap-8">
-			<Image
-				class="h-24 w-24 -rotate-2 rounded-lg border-2 border-neutral-200 p-2 shadow-lg transition-transform hover:-rotate-0 hover:scale-105 dark:border-neutral-800 dark:bg-neutral-900"
-				src={profile}
-				alt="Profile Image"
-			/>
-			<p class="text">
-				I'm an Australian technologist with strong foundations in web development, infrastructure, operations, and product-led growth. 
-				<br />
-				<br />
-				I've been scaling brands, technologies, products, and teams for {yearsOfExperience} years and I have had the privilege of working with some of Australia's most innovative startups and scaleups; including ASX:HPG hipages, ASX:BET BetMakers, ASX:CHL Camplify, ASX:NIB nib, Covidence, Digivizer, and Allie Clinics. And global companies such as Microsoft, Intel, and Lenovo.
-				<br />
-				<br />
-				I have a unique blend of skills to own end-to-end technology operations. Spanning software engineering, infrastructure, product management, and team leadership. I've always seen programming as a tool to solve business problems and create scalable value, and I thrive in environments where systems are vital to success.
-				<br />
-				<br />
-				Some of my roles have included Software Engineer, Technical Lead, Engineering Manager, Head of Engineering, and Product Manager. 
-			</p>
-		</div>
-		<!-- <div>
-			<p class="mb-2">
-				🎥 I share original product and engineering content on YouTube to give back to the next
-				generation of software engineers wanting to grow their careers.
-				<a class="cactus-link" target="_blank" href="https://youtube.com/jaydenharrod">Watch now</a>
-			</p>
-		</div> -->
-
-		<!-- <section aria-label="Blog post list">
-			<h2 class="title mb-4 text-xl">Latest Posts</h2>
-			<ul class="space-y-4 sm:space-y-2">
-				{
-					allPostsByDate.map((p) => (
-						<li class="flex flex-col gap-x-2 sm:flex-row">
-							<PostPreview post={p} />
-						</li>
-					))
-				}
-			</ul>
-		</section> -->
-	</section>
+  <section>
+    <h1 class="title">Jayden Harrod</h1>
+    <h2 class="text">Australian Technologist</h2>
+    <div class="flex gap-8">
+      <Image
+        class="h-24 w-24 -rotate-2 rounded-lg border-2 border-neutral-200 p-2 shadow-lg transition-transform hover:-rotate-0 hover:scale-105 dark:border-neutral-800 dark:bg-neutral-900"
+        src={profile}
+        alt="Profile Image"
+      />
+      <p class="text">
+        I'm a technical operator who's helped scale multiple product companies
+        to $50M+ ARR — from the ground up. I've led during moments of chaos,
+        M&A, and rapid growth to deliver meaningful outcomes across engineering,
+        infrastructure, teams, and compliance.
+        <br />
+        <br />
+         My roles have included Designer, Software Engineer, Technical Lead,
+        Engineering Manager, Product Manager, and Head of Engineering.
+      </p>
+    </div>
+  </section>
 </PageLayout>
