--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -12,7 +12,9 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const uniqueTags = getUniqueTags(allPostsByDate);
 
 	return uniqueTags.flatMap((tag) => {
-		const filterPosts = allPostsByDate.filter((post) => post.data.tags.includes(tag));
+		const filterPosts = allPostsByDate.filter((post) =>
+			post.data.tags.includes(tag),
+		);
 		return paginate(filterPosts, {
 			params: { tag },
 			pageSize: 10,
